--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>EV_project</artifactId>
+    <artifactId>EV_project_no_neg</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
